# 3d-viewer

./: .gitignore  CMakeLists-wasm.txt  CMakeLists.txt  build.sh  setup.sh  setup_log.txt
assets/: basic_shader.frag  basic_shader.vert
assets/models/tube/: tube.mtl
assets/shaders-webgl/basic/: vertex.glsl
assets/shaders-webgl/phong/: vertex.glsl
assets/shaders/phong/: fragment.glsl  vertex.glsl
build-wasm/: 3D-Viewer.data  3D-Viewer.js
build-wasm/assets/shaders-webgl/basic/: fragment.glsl
docs/: 3D-Viewer.data  3D-Viewer.html  3D-Viewer.js
docs/assets/shaders-webgl/basic/: fragment.glsl  vertex.glsl
docs/assets/shaders-webgl/phong/: fragment.glsl
docs/assets/shaders/basic/: fragment.glsl
include/: assets_manager.hpp  camera.hpp  constants.hpp  mesh.hpp  mesh_loader.hpp  object.hpp  scene.hpp  shader.hpp  texture_loader.hpp  utils.hpp  window.hpp
src/: assets_manager.cpp  assets_mngr.cpp  camera.cpp  main.cpp  mesh.cpp  mesh_loader.cpp  object.cpp  scene.cpp  shader.cpp  texture_loader.cpp  window.cpp
